// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with uglify-es options disable inline optimization by default (have a lot of problems): errors 1`] = `Array []`;

exports[`when applied with uglify-es options disable inline optimization by default (have a lot of problems): main.js 1`] = `"webpackJsonp([0],[function(e,n,s){\\"use strict\\";function t(e){return!e.fatal&&!e.ruleId&&e.message.includes(\\"eslint-disable\\")}e.exports=(e=>{for(let n=e.length-1;n>=0;--n){const s=e[n];t(s)&&console.log(s)}})}],[0]);"`;

exports[`when applied with uglify-es options disable inline optimization by default (have a lot of problems): manifest.js 1`] = `"!function(r){var n=window.webpackJsonp;window.webpackJsonp=function(e,u,c){for(var f,i,p,a=0,l=[];a<e.length;a++)i=e[a],o[i]&&l.push(o[i][0]),o[i]=0;for(f in u)Object.prototype.hasOwnProperty.call(u,f)&&(r[f]=u[f]);for(n&&n(e,u,c);l.length;)l.shift()();if(c)for(a=0;a<c.length;a++)p=t(t.s=c[a]);return p};var e={},o={1:0};function t(n){if(e[n])return e[n].exports;var o=e[n]={i:n,l:!1,exports:{}};return r[n].call(o.exports,o,o.exports,t),o.l=!0,o.exports}t.m=r,t.c=e,t.d=function(r,n,e){t.o(r,n)||Object.defineProperty(r,n,{configurable:!1,enumerable:!0,get:e})},t.n=function(r){var n=r&&r.__esModule?function(){return r.default}:function(){return r};return t.d(n,\\"a\\",n),n},t.o=function(r,n){return Object.prototype.hasOwnProperty.call(r,n)},t.p=\\"\\",t.oe=function(r){throw console.error(r),r}}([]);"`;

exports[`when applied with uglify-es options disable inline optimization by default (have a lot of problems): warnings 1`] = `Array []`;

exports[`when applied with uglify-es options matches snapshot for \`keep_classnames\` option: errors 1`] = `Array []`;

exports[`when applied with uglify-es options matches snapshot for \`keep_classnames\` option: main.js 1`] = `
"webpackJsonp([ 0 ], [ function(t, a, e) {
    \\"use strict\\";
    Object.defineProperty(a, \\"__esModule\\", {
        value: !0
    });
    var n = e(1);
    a.default = function() {
        const t = n.b, a = \`baz\${Math.random()}\`;
        return () => ({
            a: t + n.a + a,
            b: t,
            baz: a
        });
    };
}, function(t, a, e) {
    \\"use strict\\";
    a.a = \\"bar\\", a.b = \\"foo\\";
} ], [ 0 ]);"
`;

exports[`when applied with uglify-es options matches snapshot for \`keep_classnames\` option: manifest.js 1`] = `
"!function(r) {
    var n = window.webpackJsonp;
    window.webpackJsonp = function(e, u, c) {
        for (var f, i, p, a = 0, l = []; a < e.length; a++) i = e[a], o[i] && l.push(o[i][0]), 
        o[i] = 0;
        for (f in u) Object.prototype.hasOwnProperty.call(u, f) && (r[f] = u[f]);
        for (n && n(e, u, c); l.length; ) l.shift()();
        if (c) for (a = 0; a < c.length; a++) p = t(t.s = c[a]);
        return p;
    };
    var e = {}, o = {
        1: 0
    };
    function t(n) {
        if (e[n]) return e[n].exports;
        var o = e[n] = {
            i: n,
            l: !1,
            exports: {}
        };
        return r[n].call(o.exports, o, o.exports, t), o.l = !0, o.exports;
    }
    t.m = r, t.c = e, t.d = function(r, n, e) {
        t.o(r, n) || Object.defineProperty(r, n, {
            configurable: !1,
            enumerable: !0,
            get: e
        });
    }, t.n = function(r) {
        var n = r && r.__esModule ? function() {
            return r.default;
        } : function() {
            return r;
        };
        return t.d(n, \\"a\\", n), n;
    }, t.o = function(r, n) {
        return Object.prototype.hasOwnProperty.call(r, n);
    }, t.p = \\"\\", t.oe = function(r) {
        throw console.error(r), r;
    };
}([]);"
`;

exports[`when applied with uglify-es options matches snapshot for \`keep_classnames\` option: warnings 1`] = `Array []`;

exports[`when applied with uglify-es options matches snapshot for \`keep_fnames\` option: errors 1`] = `Array []`;

exports[`when applied with uglify-es options matches snapshot for \`keep_fnames\` option: main.js 1`] = `
"webpackJsonp([ 0 ], [ function(t, a, e) {
    \\"use strict\\";
    Object.defineProperty(a, \\"__esModule\\", {
        value: !0
    });
    var o = e(1);
    a.default = function Foo() {
        const t = o.b, a = \`baz\${Math.random()}\`;
        return () => ({
            a: t + o.a + a,
            b: t,
            baz: a
        });
    };
}, function(t, a, e) {
    \\"use strict\\";
    a.a = \\"bar\\", a.b = \\"foo\\";
} ], [ 0 ]);"
`;

exports[`when applied with uglify-es options matches snapshot for \`keep_fnames\` option: manifest.js 1`] = `
"!function(e) {
    var r = window.webpackJsonp;
    window.webpackJsonp = function webpackJsonpCallback(_, n, o) {
        for (var u, c, p, a = 0, i = []; a < _.length; a++) c = _[a], t[c] && i.push(t[c][0]), 
        t[c] = 0;
        for (u in n) Object.prototype.hasOwnProperty.call(n, u) && (e[u] = n[u]);
        for (r && r(_, n, o); i.length; ) i.shift()();
        if (o) for (a = 0; a < o.length; a++) p = __webpack_require__(__webpack_require__.s = o[a]);
        return p;
    };
    var _ = {}, t = {
        1: 0
    };
    function __webpack_require__(r) {
        if (_[r]) return _[r].exports;
        var t = _[r] = {
            i: r,
            l: !1,
            exports: {}
        };
        return e[r].call(t.exports, t, t.exports, __webpack_require__), t.l = !0, t.exports;
    }
    __webpack_require__.m = e, __webpack_require__.c = _, __webpack_require__.d = function(e, r, _) {
        __webpack_require__.o(e, r) || Object.defineProperty(e, r, {
            configurable: !1,
            enumerable: !0,
            get: _
        });
    }, __webpack_require__.n = function(e) {
        var r = e && e.__esModule ? function getDefault() {
            return e.default;
        } : function getModuleExports() {
            return e;
        };
        return __webpack_require__.d(r, \\"a\\", r), r;
    }, __webpack_require__.o = function(e, r) {
        return Object.prototype.hasOwnProperty.call(e, r);
    }, __webpack_require__.p = \\"\\", __webpack_require__.oe = function(e) {
        throw console.error(e), e;
    };
}([]);"
`;

exports[`when applied with uglify-es options matches snapshot for \`keep_fnames\` option: warnings 1`] = `Array []`;

exports[`when applied with uglify-es options matches snapshot for \`nameCache\` option: errors 1`] = `Array []`;

exports[`when applied with uglify-es options matches snapshot for \`nameCache\` option: main.js 1`] = `
"webpackJsonp([ 0 ], [ function(t, a, e) {
    \\"use strict\\";
    Object.defineProperty(a, \\"__esModule\\", {
        value: !0
    });
    var n = e(1);
    a.default = function() {
        const t = n.b, a = \`baz\${Math.random()}\`;
        return () => ({
            a: t + n.a + a,
            b: t,
            baz: a
        });
    };
}, function(t, a, e) {
    \\"use strict\\";
    a.a = \\"bar\\", a.b = \\"foo\\";
} ], [ 0 ]);"
`;

exports[`when applied with uglify-es options matches snapshot for \`nameCache\` option: manifest.js 1`] = `
"!function(r) {
    var n = window.webpackJsonp;
    window.webpackJsonp = function(e, u, c) {
        for (var f, i, p, a = 0, l = []; a < e.length; a++) i = e[a], o[i] && l.push(o[i][0]), 
        o[i] = 0;
        for (f in u) Object.prototype.hasOwnProperty.call(u, f) && (r[f] = u[f]);
        for (n && n(e, u, c); l.length; ) l.shift()();
        if (c) for (a = 0; a < c.length; a++) p = t(t.s = c[a]);
        return p;
    };
    var e = {}, o = {
        1: 0
    };
    function t(n) {
        if (e[n]) return e[n].exports;
        var o = e[n] = {
            i: n,
            l: !1,
            exports: {}
        };
        return r[n].call(o.exports, o, o.exports, t), o.l = !0, o.exports;
    }
    t.m = r, t.c = e, t.d = function(r, n, e) {
        t.o(r, n) || Object.defineProperty(r, n, {
            configurable: !1,
            enumerable: !0,
            get: e
        });
    }, t.n = function(r) {
        var n = r && r.__esModule ? function() {
            return r.default;
        } : function() {
            return r;
        };
        return t.d(n, \\"a\\", n), n;
    }, t.o = function(r, n) {
        return Object.prototype.hasOwnProperty.call(r, n);
    }, t.p = \\"\\", t.oe = function(r) {
        throw console.error(r), r;
    };
}([]);"
`;

exports[`when applied with uglify-es options matches snapshot for \`nameCache\` option: warnings 1`] = `Array []`;

exports[`when applied with uglify-es options matches snapshot for \`safari10\` option: errors 1`] = `Array []`;

exports[`when applied with uglify-es options matches snapshot for \`safari10\` option: main.js 1`] = `
"webpackJsonp([ 0 ], [ function(t, a, e) {
    \\"use strict\\";
    Object.defineProperty(a, \\"__esModule\\", {
        value: !0
    });
    var n = e(1);
    a.default = function() {
        const t = n.b, a = \`baz\${Math.random()}\`;
        return () => ({
            a: t + n.a + a,
            b: t,
            baz: a
        });
    };
}, function(t, a, e) {
    \\"use strict\\";
    a.a = \\"bar\\", a.b = \\"foo\\";
} ], [ 0 ]);"
`;

exports[`when applied with uglify-es options matches snapshot for \`safari10\` option: manifest.js 1`] = `
"!function(r) {
    var n = window.webpackJsonp;
    window.webpackJsonp = function(e, u, c) {
        for (var f, i, p, a = 0, l = []; a < e.length; a++) i = e[a], o[i] && l.push(o[i][0]), 
        o[i] = 0;
        for (f in u) Object.prototype.hasOwnProperty.call(u, f) && (r[f] = u[f]);
        for (n && n(e, u, c); l.length; ) l.shift()();
        if (c) for (a = 0; a < c.length; a++) p = t(t.s = c[a]);
        return p;
    };
    var e = {}, o = {
        1: 0
    };
    function t(n) {
        if (e[n]) return e[n].exports;
        var o = e[n] = {
            i: n,
            l: !1,
            exports: {}
        };
        return r[n].call(o.exports, o, o.exports, t), o.l = !0, o.exports;
    }
    t.m = r, t.c = e, t.d = function(r, n, e) {
        t.o(r, n) || Object.defineProperty(r, n, {
            configurable: !1,
            enumerable: !0,
            get: e
        });
    }, t.n = function(r) {
        var n = r && r.__esModule ? function() {
            return r.default;
        } : function() {
            return r;
        };
        return t.d(n, \\"a\\", n), n;
    }, t.o = function(r, n) {
        return Object.prototype.hasOwnProperty.call(r, n);
    }, t.p = \\"\\", t.oe = function(r) {
        throw console.error(r), r;
    };
}([]);"
`;

exports[`when applied with uglify-es options matches snapshot for \`safari10\` option: warnings 1`] = `Array []`;

exports[`when applied with uglify-es options matches snapshot for \`toplevel\` option: errors 1`] = `Array []`;

exports[`when applied with uglify-es options matches snapshot for \`toplevel\` option: main.js 1`] = `
"webpackJsonp([ 0 ], [ function(t, a, e) {
    \\"use strict\\";
    Object.defineProperty(a, \\"__esModule\\", {
        value: !0
    });
    var n = e(1);
    a.default = function() {
        const t = n.b, a = \`baz\${Math.random()}\`;
        return () => ({
            a: t + n.a + a,
            b: t,
            baz: a
        });
    };
}, function(t, a, e) {
    \\"use strict\\";
    a.a = \\"bar\\", a.b = \\"foo\\";
} ], [ 0 ]);"
`;

exports[`when applied with uglify-es options matches snapshot for \`toplevel\` option: manifest.js 1`] = `
"!function(r) {
    var n = window.webpackJsonp;
    window.webpackJsonp = function(e, u, c) {
        for (var f, i, p, a = 0, l = []; a < e.length; a++) i = e[a], o[i] && l.push(o[i][0]), 
        o[i] = 0;
        for (f in u) Object.prototype.hasOwnProperty.call(u, f) && (r[f] = u[f]);
        for (n && n(e, u, c); l.length; ) l.shift()();
        if (c) for (a = 0; a < c.length; a++) p = t(t.s = c[a]);
        return p;
    };
    var e = {}, o = {
        1: 0
    };
    function t(n) {
        if (e[n]) return e[n].exports;
        var o = e[n] = {
            i: n,
            l: !1,
            exports: {}
        };
        return r[n].call(o.exports, o, o.exports, t), o.l = !0, o.exports;
    }
    t.m = r, t.c = e, t.d = function(r, n, e) {
        t.o(r, n) || Object.defineProperty(r, n, {
            configurable: !1,
            enumerable: !0,
            get: e
        });
    }, t.n = function(r) {
        var n = r && r.__esModule ? function() {
            return r.default;
        } : function() {
            return r;
        };
        return t.d(n, \\"a\\", n), n;
    }, t.o = function(r, n) {
        return Object.prototype.hasOwnProperty.call(r, n);
    }, t.p = \\"\\", t.oe = function(r) {
        throw console.error(r), r;
    };
}([]);"
`;

exports[`when applied with uglify-es options matches snapshot for \`toplevel\` option: warnings 1`] = `Array []`;
